# js-compiler

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh
cmake/: CompileOptions.cmake  FetchLibrary.cmake
examples/: fact.js  math.js  max.js  nod.js  run_fact.sh  run_math.sh  run_max.sh  run_nod.sh
src/: CMakeLists.txt
src/grammar/: CMakeLists.txt  Js.g4
src/js-parser/: CMakeLists.txt
src/js-parser/js-parser/: main.cpp
src/libjs/: CMakeLists.txt
src/libjs/libjs/: dump_tokens.cpp  dump_tokens.hpp  parser.cpp  parser.hpp  symbol_table.cpp  symbol_table.hpp
src/libjs/libjs/ast/: Ast.cpp  Ast.hpp  Visitor.hpp  XmlSerializer.cpp  XmlSerializer.hpp
src/libjs/libjs/ast/detail/: Builder.cpp  Builder.hpp
src/libjs/libjs/codegen/: codegen.cpp  codegen.hpp
src/libjs/libjs/semantics/: sem.cpp  sem.hpp
src/libjs/libjs/symtab/: symtab.cpp  symtab.hpp
src/libjs/test/: lexer.cpp  parser.cpp
